scripts/nullaway/wpi/url93da129d40_marioskogias_blkin_hadoop_tgz-pJ8-mythrift_MyZipkinThriftJ8.txt
../wpi/url93da129d40_marioskogias_blkin_hadoop_tgz-pJ8-mythrift_MyZipkinThriftJ8/src/mythrift/Span.java:590: error: [NullAway] dereferenced expression this.name is @Nullable
            if (!this.name.equals(that.name))
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url93da129d40_marioskogias_blkin_hadoop_tgz-pJ8-mythrift_MyZipkinThriftJ8/src/mythrift/Span.java:614: error: [NullAway] dereferenced expression this.annotations is @Nullable
            if (!this.annotations.equals(that.annotations))
                                 ^
    (see http://t.uber.com/nullaway )
../wpi/url93da129d40_marioskogias_blkin_hadoop_tgz-pJ8-mythrift_MyZipkinThriftJ8/src/mythrift/Span.java:622: error: [NullAway] dereferenced expression this.binary_annotations is @Nullable
            if (!this.binary_annotations.equals(that.binary_annotations))
                                        ^
    (see http://t.uber.com/nullaway )
../wpi/url93da129d40_marioskogias_blkin_hadoop_tgz-pJ8-mythrift_MyZipkinThriftJ8/src/mythrift/Span.java:709: error: [NullAway] dereferenced expression schemes.get(iprot.getScheme()) is @Nullable
        schemes.get(iprot.getScheme()).getScheme().read(iprot, this);
                                      ^
    (see http://t.uber.com/nullaway )
../wpi/url93da129d40_marioskogias_blkin_hadoop_tgz-pJ8-mythrift_MyZipkinThriftJ8/src/mythrift/Span.java:714: error: [NullAway] dereferenced expression schemes.get(oprot.getScheme()) is @Nullable
        schemes.get(oprot.getScheme()).getScheme().write(oprot, this);
                                      ^
    (see http://t.uber.com/nullaway )
../wpi/url93da129d40_marioskogias_blkin_hadoop_tgz-pJ8-mythrift_MyZipkinThriftJ8/src/mythrift/Annotation.java:372: error: [NullAway] dereferenced expression this.value is @Nullable
            if (!this.value.equals(that.value))
                           ^
    (see http://t.uber.com/nullaway )
../wpi/url93da129d40_marioskogias_blkin_hadoop_tgz-pJ8-mythrift_MyZipkinThriftJ8/src/mythrift/Annotation.java:380: error: [NullAway] dereferenced expression this.host is @Nullable
            if (!this.host.equals(that.host))
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url93da129d40_marioskogias_blkin_hadoop_tgz-pJ8-mythrift_MyZipkinThriftJ8/src/mythrift/Annotation.java:437: error: [NullAway] dereferenced expression schemes.get(iprot.getScheme()) is @Nullable
        schemes.get(iprot.getScheme()).getScheme().read(iprot, this);
                                      ^
    (see http://t.uber.com/nullaway )
../wpi/url93da129d40_marioskogias_blkin_hadoop_tgz-pJ8-mythrift_MyZipkinThriftJ8/src/mythrift/Annotation.java:442: error: [NullAway] dereferenced expression schemes.get(oprot.getScheme()) is @Nullable
        schemes.get(oprot.getScheme()).getScheme().write(oprot, this);
                                      ^
    (see http://t.uber.com/nullaway )
../wpi/url93da129d40_marioskogias_blkin_hadoop_tgz-pJ8-mythrift_MyZipkinThriftJ8/src/mythrift/BinaryAnnotation.java:444: error: [NullAway] dereferenced expression this.key is @Nullable
            if (!this.key.equals(that.key))
                         ^
    (see http://t.uber.com/nullaway )
../wpi/url93da129d40_marioskogias_blkin_hadoop_tgz-pJ8-mythrift_MyZipkinThriftJ8/src/mythrift/BinaryAnnotation.java:452: error: [NullAway] dereferenced expression this.value is @Nullable
            if (!this.value.equals(that.value))
                           ^
    (see http://t.uber.com/nullaway )
../wpi/url93da129d40_marioskogias_blkin_hadoop_tgz-pJ8-mythrift_MyZipkinThriftJ8/src/mythrift/BinaryAnnotation.java:460: error: [NullAway] dereferenced expression this.annotation_type is @Nullable
            if (!this.annotation_type.equals(that.annotation_type))
                                     ^
    (see http://t.uber.com/nullaway )
../wpi/url93da129d40_marioskogias_blkin_hadoop_tgz-pJ8-mythrift_MyZipkinThriftJ8/src/mythrift/BinaryAnnotation.java:468: error: [NullAway] dereferenced expression this.host is @Nullable
            if (!this.host.equals(that.host))
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url93da129d40_marioskogias_blkin_hadoop_tgz-pJ8-mythrift_MyZipkinThriftJ8/src/mythrift/BinaryAnnotation.java:535: error: [NullAway] dereferenced expression schemes.get(iprot.getScheme()) is @Nullable
        schemes.get(iprot.getScheme()).getScheme().read(iprot, this);
                                      ^
    (see http://t.uber.com/nullaway )
../wpi/url93da129d40_marioskogias_blkin_hadoop_tgz-pJ8-mythrift_MyZipkinThriftJ8/src/mythrift/BinaryAnnotation.java:540: error: [NullAway] dereferenced expression schemes.get(oprot.getScheme()) is @Nullable
        schemes.get(oprot.getScheme()).getScheme().write(oprot, this);
                                      ^
    (see http://t.uber.com/nullaway )
../wpi/url93da129d40_marioskogias_blkin_hadoop_tgz-pJ8-mythrift_MyZipkinThriftJ8/src/mythrift/Endpoint.java:174: error: [NullAway] dereferenced expression other is @Nullable
        __isset_bitfield = other.__isset_bitfield;
                                ^
    (see http://t.uber.com/nullaway )
../wpi/url93da129d40_marioskogias_blkin_hadoop_tgz-pJ8-mythrift_MyZipkinThriftJ8/src/mythrift/Endpoint.java:380: error: [NullAway] dereferenced expression this.service_name is @Nullable
            if (!this.service_name.equals(that.service_name))
                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url93da129d40_marioskogias_blkin_hadoop_tgz-pJ8-mythrift_MyZipkinThriftJ8/src/mythrift/Endpoint.java:437: error: [NullAway] dereferenced expression schemes.get(iprot.getScheme()) is @Nullable
        schemes.get(iprot.getScheme()).getScheme().read(iprot, this);
                                      ^
    (see http://t.uber.com/nullaway )
../wpi/url93da129d40_marioskogias_blkin_hadoop_tgz-pJ8-mythrift_MyZipkinThriftJ8/src/mythrift/Endpoint.java:442: error: [NullAway] dereferenced expression schemes.get(oprot.getScheme()) is @Nullable
        schemes.get(oprot.getScheme()).getScheme().write(oprot, this);
                                      ^
    (see http://t.uber.com/nullaway )
../wpi/url93da129d40_marioskogias_blkin_hadoop_tgz-pJ8-mythrift_MyZipkinThriftJ8/src/mythrift/MyZipkinThrift.java:29: error: [NullAway] enhanced-for expression s.annotations is @Nullable
        for (Annotation a : s.annotations) {
                             ^
    (see http://t.uber.com/nullaway )
../wpi/url93da129d40_marioskogias_blkin_hadoop_tgz-pJ8-mythrift_MyZipkinThriftJ8/src/hadoopCode/Chooser.java:25: error: [NullAway] dereferenced expression s.name is @Nullable
        return (s.name.equals(span1) || s.name.equals(span2));
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url93da129d40_marioskogias_blkin_hadoop_tgz-pJ8-mythrift_MyZipkinThriftJ8/src/hadoopCode/Chooser.java:30: error: [NullAway] dereferenced expression a.value is @Nullable
        return (a.value.equals(annot1) || a.value.equals(annot2));
                       ^
    (see http://t.uber.com/nullaway )
../wpi/url93da129d40_marioskogias_blkin_hadoop_tgz-pJ8-mythrift_MyZipkinThriftJ8/src/hadoopCode/Chooser.java:35: error: [NullAway] dereferenced expression a.getHost() is @Nullable
        return Long.toString(s.trace_id) + ":" + Long.toString(s.id) + ":" + a.getHost().service_name;
                                                                                        ^
    (see http://t.uber.com/nullaway )
../wpi/url93da129d40_marioskogias_blkin_hadoop_tgz-pJ8-mythrift_MyZipkinThriftJ8/src/hadoopCode/RecentMapper.java:44: error: [NullAway] enhanced-for expression span.annotations is @Nullable
            for (Annotation a : span.annotations) {
                                    ^
    (see http://t.uber.com/nullaway )
Note: ../wpi/url93da129d40_marioskogias_blkin_hadoop_tgz-pJ8-mythrift_MyZipkinThriftJ8/src/hadoopCode/Recent.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
24 errors
